--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -657,7 +657,7 @@ $(APIMANS) $(SRPMANS):
 
 update-makefile:
 	FUNCS=`$(top_srcdir)/doc/scripts/gdoc -listfunc \
-		$(top_srcdir)/{lib,libextra,lib/x509,lib/openpgp}/*.c`; \
+		$(top_srcdir)/{lib,lib/x509,lib/openpgp}/*.c`; \
 	MANS=""; \
 	SRPMANS=""; \
 	for i in $$FUNCS; do \
@@ -684,20 +684,6 @@ doit:
 			-copyright "2008 Free Software Foundation" \
 			-function $$i \
 			$(top_srcdir)/lib/*.c > $$i.3 && \
-		echo -n "."; \
-	done; \
-	echo ""; \
-	echo -n "Creating man pages for libextra/" && \
-	for i in `$(top_srcdir)/doc/scripts/gdoc -listfunc $(top_srcdir)/libextra/*.c`; do \
-		$(top_srcdir)/doc/scripts/gdoc -man \
-			-module $(PACKAGE) -sourceversion $(VERSION) \
-			-bugsto $(PACKAGE_BUGREPORT) \
-			-pkg-name "$(PACKAGE_NAME)" \
-			-include "gnutls/extra.h" \
-			-seeinfo $(PACKAGE) -verbatimcopying \
-			-copyright "2008 Free Software Foundation" \
-			-function $$i \
-			$(top_srcdir)/libextra/*.c > $$i.3 && \
 		echo -n "."; \
 	done; \
 	echo ""; \
