--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,7 +29,7 @@ AM_CPPFLAGS = \
 	-I$(srcdir)/../gl			\
 	-I$(builddir)/../lib/includes		\
 	-I$(srcdir)/../lib/includes		\
-	-I$(srcdir)/../libextra/includes	\
+	-I$(srcdir)/../extra/includes	\
 	-I$(srcdir)/cfg
 
 bin_PROGRAMS = gnutls-serv gnutls-cli psktool gnutls-cli-debug
