Also add -I's for gnulib's build directory, for mingw.
Reported by "Hoyt, David" <hoyt6@llnl.gov>.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -30,7 +30,8 @@ localedir = $(datadir)/locale
 AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = \
 	-DLOCALEDIR=\"$(localedir)\"		\
-	-I$(srcdir)/../gl				\
+	-I$(srcdir)/../gl			\
+	-I$(builddir)/../gl			\
 	-I$(srcdir)/includes			\
 	-I$(srcdir)/x509
 
