--- a/lib/accelerated/x86/Makefile.am
+++ b/lib/accelerated/x86/Makefile.am
@@ -23,6 +23,7 @@ AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = \
 	-I$(srcdir)/../../../gl		\
 	-I$(srcdir)/../../includes	\
+	-I$(builddir)/../../includes	\
 	-I$(srcdir)/../../ \
 	-I$(srcdir)/../
 
