--- a/lib/nettle/Makefile.am
+++ b/lib/nettle/Makefile.am
@@ -23,6 +23,7 @@ AM_CPPFLAGS = \
 	-I$(srcdir)/../../gl		\
 	-I$(srcdir)/../includes		\
 	-I$(builddir)/../includes	\
+	-I$(builddir)/../../gl          \
 	-I$(srcdir)/..
 
 if ENABLE_MINITASN1
