more builddir fixes by David Hoyt.

--- a/lib/accelerated/Makefile.am
+++ b/lib/accelerated/Makefile.am
@@ -22,6 +22,7 @@ AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS)
 SUBDIRS = 
 AM_CPPFLAGS = \
 	-I$(srcdir)/../../gl		\
+	-I$(builddir)/../../gl		\
 	-I$(srcdir)/../includes		\
 	-I$(builddir)/../../gl		\
 	-I$(builddir)/../includes	\
