--- a/extra/Makefile.am
+++ b/extra/Makefile.am
@@ -26,10 +26,13 @@ ACLOCAL_AMFLAGS = -I ../m4 -I ../gl/m4
 AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = \
 	-I$(srcdir)/../gl			\
+	-I$(builddir)/../gl			\
 	-I$(builddir)/../lib/includes	\
 	-I$(srcdir)/../lib/includes	\
 	-I$(srcdir)/includes		\
-	-I$(srcdir)/../lib
+	-I$(builddir)/includes		\
+	-I$(srcdir)/../lib		\
+	-I$(builddir)/../lib
 
 if ENABLE_MINITASN1
 AM_CPPFLAGS += -I$(srcdir)/../lib/minitasn1
