--- a/lib/openpgp/Makefile.am
+++ b/lib/openpgp/Makefile.am
@@ -21,6 +21,7 @@
 AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = \
 	-I$(srcdir)/../../gl		\
+	-I$(builddir)/../../gl		\
 	-I$(srcdir)/../includes		\
 	-I$(builddir)/../includes	\
 	-I$(builddir)/../../gl          \
