added new gnulib and modules.

--- a/.gitignore
+++ b/.gitignore
@@ -332,31 +332,31 @@ lib/x509/Makefile
 lib/x509/Makefile.in
 lib/x509/libgnutls_x509.la
 lib/x509/x509-api.texi
-libextra/INSTALL
-libextra/Makefile
-libextra/Makefile.in
-libextra/aclocal.m4
-libextra/autom4te.cache/
-libextra/build-aux/config.guess
-libextra/build-aux/config.sub
-libextra/build-aux/depcomp
-libextra/build-aux/install-sh
-libextra/build-aux/ltmain.sh
-libextra/build-aux/missing
-libextra/config.h
-libextra/config.h.in
-libextra/config.log
-libextra/config.status
-libextra/configure
-libextra/gnutls-extra-api.texi
-libextra/gnutls-extra.pc
-libextra/ia-api.texi
-libextra/includes/Makefile
-libextra/includes/Makefile.in
-libextra/libgnutls-extra.la
-libextra/libgnutls-openssl.la
-libextra/libtool
-libextra/stamp-h1
+extra/INSTALL
+extra/Makefile
+extra/Makefile.in
+extra/aclocal.m4
+extra/autom4te.cache/
+extra/build-aux/config.guess
+extra/build-aux/config.sub
+extra/build-aux/depcomp
+extra/build-aux/install-sh
+extra/build-aux/ltmain.sh
+extra/build-aux/missing
+extra/config.h
+extra/config.h.in
+extra/config.log
+extra/config.status
+extra/configure
+extra/gnutls-extra-api.texi
+extra/gnutls-extra.pc
+extra/ia-api.texi
+extra/includes/Makefile
+extra/includes/Makefile.in
+extra/libgnutls-extra.la
+extra/libgnutls-openssl.la
+extra/libtool
+extra/stamp-h1
 libtool
 m4/codeset.m4
 m4/gettext.m4
