more files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -268,6 +268,27 @@ gl/tests/test-vfprintf-posix
 gl/tests/test-vprintf-posix
 gl/tests/test-vsnprintf
 gl/tests/test-wchar
+gl/tests/test-ftruncate
+gl/tests/test-ioctl
+gl/tests/test-lock
+gl/tests/test-perror2
+gl/tests/test-pipe
+gl/tests/test-recv
+gl/tests/test-send
+gl/tests/test-signal-h
+gl/tests/test-strerror_r
+gl/tests/test-thread_create
+gl/tests/test-thread_self
+gl/tests/arpa/
+gl/tests/test-accept
+gl/tests/test-bind
+gl/tests/test-getpeername
+gl/tests/test-listen
+gl/tests/test-recvfrom
+gl/tests/test-sendto
+gl/tests/test-setsockopt
+gl/tests/test-shutdown
+gl/tests/test-connect
 gl/tests/warn-on-use.h
 gl/time.h
 gl/time.h
@@ -532,13 +553,4 @@ tests/x509paths/
 tests/x509self
 tests/x509sign-verify
 tests/x509signself
-gl/tests/arpa/
-gl/tests/test-accept
-gl/tests/test-bind
-gl/tests/test-getpeername
-gl/tests/test-listen
-gl/tests/test-recvfrom
-gl/tests/test-sendto
-gl/tests/test-setsockopt
-gl/tests/test-shutdown
 gl/signal.h
