--- a/guile/pre-inst-guile.in
+++ b/guile/pre-inst-guile.in
@@ -23,6 +23,9 @@
 GUILE_LOAD_PATH="@abs_top_srcdir@/guile/modules:$GUILE_LOAD_PATH"
 export GUILE_LOAD_PATH
 
+GNUTLS_GUILE_EXTENSION_DIR="@abs_top_srcdir@/guile/src"
+export GNUTLS_GUILE_EXTENSION_DIR
+
 exec @abs_top_builddir@/libtool --mode=execute		                    \
        -dlopen "@abs_top_builddir@/guile/src/libguile-gnutls-v-2.la"        \
        @GUILE@ "$@"
